Change title and header for showcase generator
Updated the title and header content for the showcase generator.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         </style>
         <link rel="stylesheet" href="style.css" />
         <script src="main.js" type="module" defer></script>
-        <title>ATF Showcase Generator</title>
+        <title>LOTA3:Pale Showcase Generator</title>
     </head>
     <body>
         <header>
             <h1 class="header__title">
-                After the Flash
+                LOTA3:Pale
                 <span>Showcase Generator</span>
             </h1>
         </header>
@@ -120,3 +120,4 @@
         </main>
     </body>
 </html>
+
