Refactor index.html title and header content
Updated the title and header text for clarity.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
         </style>
         <link rel="stylesheet" href="style.css" />
         <script src="main.js" type="module" defer></script>
-        <title>LOTA3:Pale Showcase Generator</title>
+        <title>LOTA3:Pale     Showcase Generator</title>
     </head>
     <body>
         <header>
             <h1 class="header__title">
-                LOTA3:Pale
-                
-                <span>Showcase Generator</span>
+                LOTA3:The Pale
+               <span>Showcase Generator</span>
             </h1>
         </header>
         <main>
@@ -121,5 +120,6 @@
         </main>
     </body>
 </html>
+
 
 
